--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,20 @@
   </head>
   <body class="min-h-screen bg-base-200">
     <div x-data="indexPage">
+      <!-- Inline Alert (do not remove) — placed between nav and main -->
+      <div
+        x-show="$store.alert.visible"
+        x-transition
+        :class="'alert alert-' + $store.alert.type"
+        class="rounded-none"
+        role="alert"
+      >
+        <span x-text="$store.alert.message"></span>
+        <button class="btn btn-ghost btn-sm btn-square ml-auto" @click="$store.alert.dismiss()">
+          <iconify-icon icon="lucide:x"></iconify-icon>
+        </button>
+      </div>
+
       <!-- Content -->
       <main class="max-w-4xl mx-auto p-6">
         <!-- Header -->
@@ -287,14 +301,6 @@
         </div>
       </dialog>
 
-      <!-- Toast (do not remove) -->
-      <div class="toast toast-top toast-center">
-        <template x-for="t in $store.toast.items" :key="t.id">
-          <div x-transition :class="'alert alert-' + t.type">
-            <span x-text="t.message"></span>
-          </div>
-        </template>
-      </div>
     </div>
 
     <script>
