--- a/web/template.html
+++ b/web/template.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="AI Coding Kit Web 单文件页面模板，含通用布局与 fetch 交互示例。"
+    />
+    <link rel="icon" href="/favicon.png" />
     <title>Web Template</title>
 
     <link
